objects/Blue_Directions_LOB__c.object
<CustomObject>
    <fields>
        <fullName>Dearborn_Vol_Employ_Multiple_Max__c</fullName>
        <inlineHelpText>In Thousands</inlineHelpText>
        <label>Multiple of Salary Maximum Value</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dearborn_Vol_Spouse_Multiple_Max__c</fullName>
        <inlineHelpText>In Thousands</inlineHelpText>
        <label>Multiple of Salary Maximum Value</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dearborn_Wellness_Screenings__c</fullName>
        <label>Wellness Screenings</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dental_Addl_Comments__c</fullName>
        <inlineHelpText>Please provide any additional information relevant for Underwriting</inlineHelpText>
        <label>Add&apos;l Comments re: this Dental quote</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dental_Commission_Amount__c</fullName>
        <label>If yes, indicate amount</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dental_Commissions__c</fullName>
        <label>Dental Commissions Requested</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dental_Plan_Select__c</fullName>
        <inlineHelpText>If requesting 2 dental plans, select one plan from the “High Option” category and one plan from the “Low Option” category.</inlineHelpText>
        <label>Dental Plan Selection</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Blue_Directions_Plan_Year__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>DHMO710</fullName>
                </value>
                <value>
                    <fullName>DHMO730</fullName>
                </value>
                <value>
                    <fullName>DHMO810</fullName>
                </value>
                <value>
                    <fullName>DHMO830</fullName>
                </value>
                <value>
                    <fullName>DHSC09</fullName>
                </value>
                <value>
                    <fullName>DINHM08</fullName>
                </value>
                <value>
                    <fullName>DINHM10</fullName>
                </value>
                <value>
                    <fullName>DINHM12</fullName>
                </value>
                <value>
                    <fullName>DINHM14</fullName>
                </value>
                <value>
                    <fullName>DINHM16</fullName>
                </value>
                <value>
                    <fullName>DINHR01</fullName>
                </value>
                <value>
                    <fullName>DINHR02</fullName>
                </value>
                <value>
                    <fullName>DINHR03</fullName>
                </value>
                <value>
                    <fullName>DINHR04</fullName>
                </value>
                <value>
                    <fullName>DINHR13</fullName>
                </value>
                <value>
                    <fullName>DINHR20</fullName>
                </value>
                <value>
                    <fullName>DINHR22</fullName>
                </value>
                <value>
                    <fullName>DINHR23</fullName>
                </value>
                <value>
                    <fullName>DINL5R0</fullName>
                </value>
                <value>
                    <fullName>DINLM09</fullName>
                </value>
                <value>
                    <fullName>DINLM11</fullName>
                </value>
                <value>
                    <fullName>DINLM15</fullName>
                </value>
                <value>
                    <fullName>DINLM21</fullName>
                </value>
                <value>
                    <fullName>DINLM25</fullName>
                </value>
                <value>
                    <fullName>DINLM26</fullName>
                </value>
                <value>
                    <fullName>DINLR05</fullName>
                </value>
                <value>
                    <fullName>DINLR06</fullName>
                </value>
                <value>
                    <fullName>DINLR07</fullName>
                </value>
                <value>
                    <fullName>DINLR24</fullName>
                </value>
                <value>
                    <fullName>DMNHM09</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dental_Underwriter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Dental Underwriter</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Underwriting</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Blue_Directions_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incremental_Choice_Minimum_Value__c</fullName>
        <inlineHelpText>In Thousands
Maximum Benefit not to exceed 50% of Employee plan maximum</inlineHelpText>
        <label>Incremental Choice Minimum Value</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MPS__c</fullName>
        <description>Selected medical plan list</description>
        <inlineHelpText>Select up to 8 plans to quote. You may choose 3-5 of these plans to offer. All Blue Directions quotes include Benefit Value Advisor (BVA).</inlineHelpText>
        <label>Medical Plan Selection</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Blue_Directions_Plan_Year__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>BPA10a</fullName>
                </value>
                <value>
                    <fullName>BPA10b</fullName>
                </value>
                <value>
                    <fullName>BPA11a</fullName>
                </value>
                <value>
                    <fullName>BPA11b</fullName>
                </value>
                <value>
                    <fullName>BPA12a</fullName>
                </value>
                <value>
                    <fullName>BPA12b</fullName>
                </value>
                <value>
                    <fullName>BPA13a</fullName>
                </value>
                <value>
                    <fullName>BPA13b</fullName>
                </value>
                <value>
                    <fullName>BPA14a</fullName>
                </value>
                <value>
                    <fullName>BPA14b</fullName>
                </value>
                <value>
                    <fullName>BPA15a</fullName>
                </value>
                <value>
                    <fullName>BPA15b</fullName>
                </value>
                <value>
                    <fullName>BPA16a</fullName>
                </value>
                <value>
                    <fullName>BPA16b</fullName>
                </value>
                <value>
                    <fullName>BPA17a</fullName>
                </value>
                <value>
                    <fullName>BPA17b</fullName>
                </value>
                <value>
                    <fullName>BPA18a</fullName>
                </value>
                <value>
                    <fullName>BPA18b</fullName>
                </value>
                <value>
                    <fullName>BPA19a</fullName>
                </value>
                <value>
                    <fullName>BPA19b</fullName>
                </value>
                <value>
                    <fullName>BPA1a</fullName>
                </value>
                <value>
                    <fullName>BPA1b</fullName>
                </value>
                <value>
                    <fullName>BPA20a</fullName>
                </value>
                <value>
                    <fullName>BPA20b</fullName>
                </value>
                <value>
                    <fullName>BPA21a</fullName>
                </value>
                <value>
                    <fullName>BPA21b</fullName>
                </value>
                <value>
                    <fullName>BPA22a</fullName>
                </value>
                <value>
                    <fullName>BPA22b</fullName>
                </value>
                <value>
                    <fullName>BPA2a</fullName>
                </value>
                <value>
                    <fullName>BPA2b</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical_Addl_Comments__c</fullName>
        <inlineHelpText>Please provide any additional information relevant for Underwriting</inlineHelpText>
        <label>Add&apos;l Comments re: this Medical quote</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Medical_Commission_Amount__c</fullName>
        <label>If yes, indicate amount</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Commissions__c</fullName>
        <label>Medical Commissions Requested</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical_HCSC_Division__c</fullName>
        <label>HCSC Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NM</fullName>
                </value>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>TX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical_Number_of_Plans__c</fullName>
        <inlineHelpText>Pick a Plan - Guiding Principles 
- Goal is to offer an array of plan design choice both from a product and benefit richness perspective 
- Minimum of 3 plans in a package 
- Maximum of 5 plans in a package 
- Maximum of 8 plans in a package (OK only)</inlineHelpText>
        <label>Number of Medical Plans Offered</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical_Plan_Select_Text__c</fullName>
        <formula>&quot;1. Benefit plans should be chosen that most closely match the client&apos;s current designs&quot; &amp; BR() &amp;
&quot;2. Additional plans should be added to provide more plan choice in the package&quot; &amp; BR() &amp;
&quot;3. At least one (1) Qualified High Deductible Health Plan (HDHP) should be included in each package - if only one (1) is selected, it is recommended that the plan be the minimum value(60% actuarial value) plan&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Selecting the plans:</label>
        <type>Text</type>
    </fields>
    <label>Private Exchange - Product</label>
    <nameField>
        <displayFormat>LOB-{0000}</displayFormat>
        <label>Product ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Private Exchange - Product</pluralLabel>
    <recordTypes>
        <fullName>Dearborn_Critical_Illness</fullName>
        <active>true</active>
        <description>The Dental Exchange Line of Business and Critical Illness Benefits</description>
        <label>Dearborn - Critical Illness</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dearborn_Disability</fullName>
        <active>true</active>
        <description>The Dental Exchange Line of Business and Short &amp; Long-term Disability Benefits</description>
        <label>Dearborn - Disability</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dearborn_Term_Life</fullName>
        <active>true</active>
        <description>The Dental Exchange Line of Business and Term Life Benefit</description>
        <label>Dearborn - Term Life</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dental</fullName>
        <active>true</active>
        <description>The Dental Exchange Line of Business</description>
        <label>Blue Directions - Dental</label>
    </recordTypes>
    <recordTypes>
        <fullName>External_Dental</fullName>
        <active>true</active>
        <description>Dental Record type for Private Exchange - ME</description>
        <label>External - Dental</label>
    </recordTypes>
    <recordTypes>
        <fullName>External_Medical</fullName>
        <active>true</active>
        <description>Medical Record type for Private Exchange - ME</description>
        <label>External - Medical</label>
    </recordTypes>
    <recordTypes>
        <fullName>Medical</fullName>
        <active>true</active>
        <description>The Medical Exchange Line of Business</description>
        <label>Blue Directions - Medical</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Dearborn_CI_150_Comments_Req</fullName>
        <active>true</active>
        <description>If Coverage Reduction is Other then the Critical illness 150 comments are required</description>
        <errorConditionFormula>AND(
ISPICKVAL(Dearborn_CI_Vol150_Cov_Reduc_Sch__c, &apos;Other&apos;),
ISBLANK(Dearborn_CI_Vol150_Cov_Comments__c)
)</errorConditionFormula>
        <errorDisplayField>Dearborn_CI_Vol150_Cov_Comments__c</errorDisplayField>
        <errorMessage>The Coverage Reduction Schedule is Other therefore, comments are required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dearborn_CI_151_Comments_Req</fullName>
        <active>true</active>
        <description>If Coverage Reduction is Other then the Critical illness 151 comments are required</description>
        <errorConditionFormula>AND( 
ISPICKVAL(Dearborn_CI_Vol151_Cov_Reduc_Sch__c, &apos;Other&apos;), 
ISBLANK(Dearborn_CI_Vol151_Cov_Comments__c) 
)</errorConditionFormula>
        <errorDisplayField>Dearborn_CI_Vol151_Cov_Comments__c</errorDisplayField>
        <errorMessage>The Coverage Reduction Schedule is Other therefore, comments are required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dearborn_CI_Basic_Comments_Req</fullName>
        <active>true</active>
        <description>If the coverage reduction schedule is other then the comments are required</description>
        <errorConditionFormula>AND(
RecordType.Name = &apos;Dearborn - Critical Illness&apos;,
ISPICKVAL(Dearborn_CI_Basic_Cov_Reduc_Sch__c, &apos;Other&apos;),
ISBLANK(Dearborn_CI_Basic_Cov_Comments__c)
)</errorConditionFormula>
        <errorDisplayField>Dearborn_CI_Basic_Cov_Reduc_Sch__c</errorDisplayField>
        <errorMessage>Coverage Reduction Schedule is Other therefore, the comments field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dearborn_CI_Child_151_Req</fullName>
        <active>true</active>
        <description>if the Voluntary Critical Illness Child Coverage is filled out, then at least one of the fields in the Voluntary Critical Illness - 151 Eligible Lives or More - $20K Max or one of the fields in the Voluntary Critical Illness - 150 Eligible Lives or Less</description>
        <errorConditionFormula>AND( 
RecordType.Name = &apos;Dearborn - Critical Illness&apos;, 
NOT(ISNEW()), 
AND( 
ISBLANK(Dearborn_CI_Vol151_Inc_Choice_Max__c), 
ISBLANK(Dearborn_CI_Vol151_Inc_Choice_Min__c), 
ISBLANK(Dearborn_CI_Vol151_Inc_Choice_Increments__c), 
ISBLANK(TEXT(Dearborn_CI_Vol151_Cov_Reduc_Sch__c)), 
ISBLANK(Dearborn_CI_Vol151_Cov_Comments__c) 
), 
AND( 
ISBLANK(Dearborn_CI_Vol150_Inc_Choice_Max__c), 
ISBLANK(Dearborn_CI_Vol150_Inc_Choice_Min__c), 
ISBLANK(Dearborn_CI_Vol150_Inc_Choice_Increments__c), 
ISBLANK(TEXT(Dearborn_CI_Vol150_Cov_Reduc_Sch__c)), 
ISBLANK(Dearborn_CI_Vol150_Cov_Comments__c) 
), 
OR( 
NOT(ISBLANK(Dearborn_CI_VolChild_Inc_Choice_Max__c)), 
NOT(ISBLANK(Dearborn_CI_VolChild_Inc_Choice_Min__c)), 
NOT(ISBLANK(Dearborn_CI_VolChild_Inc_Choice_Incremen__c)) 
) 
)</errorConditionFormula>
        <errorMessage>The Voluntary Employee CI section needs to be filled out if Voluntary CI Child Coverage is requested</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dearborn_CI_One_Field_Required</fullName>
        <active>true</active>
        <description>If at least one field is filled out the record can be saved</description>
        <errorConditionFormula>AND(
RecordType.Name = &apos;Dearborn - Critical Illness&apos;,
NOT(ISNEW()),
ISBLANK(Dearborn_CI_Basic_Flat_Dollar__c),
ISBLANK(TEXT(Dearborn_CI_Basic_Cov_Reduc_Sch__c)),
ISBLANK(Dearborn_CI_Basic_Cov_Comments__c),
ISBLANK(Dearborn_CI_Vol151_Cov_Comments__c),
ISBLANK(Dearborn_CI_Vol150_Cov_Comments__c),
ISBLANK(Dearborn_CI_Vol151_Inc_Choice_Max__c),
ISBLANK(Dearborn_CI_Vol150_Inc_Choice_Max__c),
ISBLANK(Dearborn_CI_VolSpouse_Inc_Choice_Max__c),
ISBLANK(Dearborn_CI_VolChild_Inc_Choice_Max__c),
ISBLANK(Dearborn_CI_Vol151_Inc_Choice_Min__c),
ISBLANK(Dearborn_CI_Vol150_Inc_Choice_Min__c),
ISBLANK(Dearborn_CI_VolSpouse_Inc_Choice_Min__c),
ISBLANK(Dearborn_CI_VolChild_Inc_Choice_Min__c),
ISBLANK(    Dearborn_CI_Vol151_Inc_Choice_Increments__c),
ISBLANK(Dearborn_CI_Vol150_Inc_Choice_Increments__c),
ISBLANK(    Dearborn_CI_VolSpouse_Inc_Choice_Increme__c),
ISBLANK(Dearborn_CI_VolChild_Inc_Choice_Incremen__c),
ISBLANK(TEXT(Dearborn_CI_Vol151_Cov_Reduc_Sch__c)),
ISBLANK(TEXT(Dearborn_CI_Vol150_Cov_Reduc_Sch__c)),
ISBLANK(TEXT(Dearborn_Wellness_Screenings__c))
)</errorConditionFormula>
        <errorMessage>Please fill out at least one section in the form</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dearborn_CI_Spouse_Section_151_Req</fullName>
        <active>true</active>
        <description>if the Voluntary Critical Illness Spouse Coverage is filled out, then at least one of the fields in the Voluntary Critical Illness - 151 Eligible Lives or More - $20K Max or one of the fields in the Voluntary Critical Illness - 150 Eligible Lives or Less.</description>
        <errorConditionFormula>AND( 
RecordType.Name = &apos;Dearborn - Critical Illness&apos;, 
NOT(ISNEW()),
AND(
ISBLANK(Dearborn_CI_Vol151_Inc_Choice_Max__c), 
ISBLANK(Dearborn_CI_Vol151_Inc_Choice_Min__c), 
ISBLANK(Dearborn_CI_Vol151_Inc_Choice_Increments__c), 
ISBLANK(TEXT(Dearborn_CI_Vol151_Cov_Reduc_Sch__c)), 
ISBLANK(Dearborn_CI_Vol151_Cov_Comments__c) 
),
AND(
ISBLANK(Dearborn_CI_Vol150_Inc_Choice_Max__c), 
ISBLANK(Dearborn_CI_Vol150_Inc_Choice_Min__c), 
ISBLANK(Dearborn_CI_Vol150_Inc_Choice_Increments__c), 
ISBLANK(TEXT(Dearborn_CI_Vol150_Cov_Reduc_Sch__c)), 
ISBLANK(Dearborn_CI_Vol150_Cov_Comments__c) 
), 
OR( 
NOT(ISBLANK(Dearborn_CI_VolSpouse_Inc_Choice_Max__c)), 
NOT(ISBLANK(Dearborn_CI_VolSpouse_Inc_Choice_Min__c)), 
NOT(ISBLANK(Dearborn_CI_VolSpouse_Inc_Choice_Increme__c)) 
) 
)</errorConditionFormula>
        <errorMessage>The Voluntary Employee CI section needs to be filled out if Voluntary CI Spouse Coverage is requested</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dearborn_Disability_Long_Comments_Req</fullName>
        <active>true</active>
        <description>If Disability Type equals Other then Long Term comments is required</description>
        <errorConditionFormula>AND( 
ISPICKVAL(Dearborn_Disability_Long_Term_Type__c, &apos;Other&apos;), 
ISBLANK(Dearborn_Disability_LT_Comments__c) 
)</errorConditionFormula>
        <errorDisplayField>Dearborn_Disability_LT_Comments__c</errorDisplayField>
        <errorMessage>Disability Type is Other therefore, the comments field must be filled out</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dearborn_Disability_Required_Field</fullName>
        <active>true</active>
        <description>Disability Type must be filled out for either Short Term or Long Term Disability</description>
        <errorConditionFormula>AND(
RecordType.Name = &apos;Dearborn - Disability&apos;,
NOT(ISNEW()),
ISBLANK(TEXT(Dearborn_Disability_Short_Term_Type__c)),
ISBLANK(TEXT(Dearborn_Disability_Long_Term_Type__c))
)</errorConditionFormula>
        <errorMessage>Disability Type must be entered in the Short Term or Long Term Disability sections</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dearborn_Disability_Short_Comments_Req</fullName>
        <active>true</active>
        <description>If Disability type is &apos;Other&apos; then Short Term comments is required</description>
        <errorConditionFormula>AND(
ISPICKVAL(Dearborn_Disability_Short_Term_Type__c, &apos;Other&apos;),
ISBLANK(Dearborn_Disability_ST_Comments__c)
)</errorConditionFormula>
        <errorDisplayField>Dearborn_Disability_ST_Comments__c</errorDisplayField>
        <errorMessage>Disability Type is Other therefore, the comments field must be filled out</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dearborn_Term_Life_Basic_Commens_Req</fullName>
        <active>true</active>
        <description>If Flat Coverage Reduction Schedule or Multiple Coverage Reduction Schedule is Other then the Comments field is required</description>
        <errorConditionFormula>AND(
OR(
ISPICKVAL(Dearborn_Life_Flat_Cov_Reduce__c, &apos;Other&apos;),
ISPICKVAL(Dearborn_Life_Multiple_Cov_Reduce__c, &apos;Other&apos;)
),
ISBLANK(Dearborn_Life_Basic_Comments__c)
)</errorConditionFormula>
        <errorDisplayField>Dearborn_Life_Basic_Comments__c</errorDisplayField>
        <errorMessage>The Comments field must be filled out if the Flat Coverage Reduction Schedule or Multiple Coverage Reduction Schedule fields is &apos;Other&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dearborn_Term_Life_Basic_Mulitple_Salary</fullName>
        <active>true</active>
        <description>If Multiple of Salary is chosen in the Benefit Amount Choice field then the Multiple of Salary and Multiple Coverage Reduction Schedule is required.</description>
        <errorConditionFormula>AND(
IF(INCLUDES(Dearborn_Life_Basic_Choice__c, &quot;Multiple of Salary&quot;), True, False),
OR(
ISBLANK(Dearborn_Life_Multiple_of_Salary__c),
ISBLANK(TEXT(Dearborn_Life_Multiple_Cov_Reduce__c))
)
)</errorConditionFormula>
        <errorDisplayField>Dearborn_Life_Basic_Choice__c</errorDisplayField>
        <errorMessage>Multiple Of Salary was chosen therefore, you need to fill out the Multiple of Salary field and the Multiple Coverage Reduction Schedule field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dearborn_Term_Life_Emp_Ben_Req_For_Child</fullName>
        <active>true</active>
        <description>If there are no Voluntary Life Employee Benefits fields filled out then you cannot save any Voluntary Child coverage fields</description>
        <errorConditionFormula>AND(
RecordType.Name = &apos;Dearborn - Term Life&apos;,
NOT(ISNEW()), 
AND(
ISBLANK((Dearborn_Life_Vol_Emp_Choice__c)),
ISBLANK(Dearborn_Life_Vol_Emp_Min__c),
ISBLANK(Dearborn_Life_Vol_Emp_Max__c),
ISBLANK(Dearborn_Life_Vol_Emp_Increments__c),
ISBLANK(Dearborn_Life_Vol_Emp_Multiple_of_Salary__c),
ISBLANK(TEXT(Dearborn_Life_Vol_Emp_Inc_Cov_Reduce__c)),
ISBLANK(TEXT(Dearborn_Life_Vol_Emp_Multiple_Cov_Reduc__c)),
ISBLANK(Dearborn_Life_Vol_Emp_Comments__c)
),
OR(
NOT(ISBLANK(Dearborn_Life_Vol_Child_Max__c)),
NOT(ISBLANK(Dearborn_Life_Vol_Child_Min__c)),
NOT(ISBLANK(Dearborn_Life_Vol_Child_Increments__c))
)
)</errorConditionFormula>
        <errorMessage>The Voluntary Life Employee Benefits section needs to be filled out if Voluntary Life Child Coverage is requested</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dearborn_Term_Life_Flat_Dollar_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(INCLUDES(Dearborn_Life_Basic_Choice__c, &quot;Flat Dollar&quot;),  OR(ISBLANK(Dearborn_Life_Flat_Dollar__c), ISPICKVAL(Dearborn_Life_Flat_Cov_Reduce__c, &quot;&quot; )))</errorConditionFormula>
        <errorMessage>Flat Dollar (In Thousands) and Flat Coverage Reduction Schedule are required when Flat Dollar is selected in Benefit Amount Choice</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dearborn_Term_Life_One_Field_Req</fullName>
        <active>true</active>
        <description>If atleast one field is filled out the record can be saved</description>
        <errorConditionFormula>AND(
NOT(ISNEW()),
RecordType.Name = &apos;Dearborn - Term Life&apos;,
ISBLANK(Dearborn_Life_Basic_Comments__c),
ISBLANK(Dearborn_Life_Vol_Emp_Comments__c),
ISBLANK(Dearborn_Life_Vol_Emp_Increments__c),
ISBLANK(Dearborn_Life_Vol_Spouse_Increments__c),
ISBLANK(Dearborn_Life_Vol_Child_Increments__c),
ISBLANK(Dearborn_Life_Vol_Emp_Max__c),
ISBLANK(Dearborn_Life_Vol_Child_Max__c),
ISBLANK(Dearborn_Life_Vol_Spouse_Max__c),
ISBLANK(Dearborn_Life_Vol_Emp_Min__c),
ISBLANK(Dearborn_Life_Vol_Spouse_Min__c),
ISBLANK(Dearborn_Life_Vol_Child_Min__c),
ISBLANK(TEXT(Dearborn_Life_Flat_Cov_Reduce__c)),
ISBLANK(TEXT(Dearborn_Life_Vol_Emp_Inc_Cov_Reduce__c)),
ISBLANK(TEXT(Dearborn_Life_Multiple_Cov_Reduce__c)),
ISBLANK(TEXT(Dearborn_Life_Vol_Emp_Multiple_Cov_Reduc__c)),
ISBLANK(Dearborn_Life_Multiple_of_Salary__c),
ISBLANK(Dearborn_Life_Vol_Emp_Multiple_of_Salary__c),
ISBLANK(Dearborn_Life_Vol_Spouse_Multiple_of_EE__c),
ISBLANK(TEXT(Dearborn_Life_Retiree_Cov__c)),
ISBLANK(Dearborn_Life_Basic_Choice__c),
ISBLANK(Dearborn_Life_Vol_Emp_Choice__c),
ISBLANK(Dearborn_Life_Vol_Spouse_Choice__c)
)</errorConditionFormula>
        <errorMessage>Please fill out at least one section in the form</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dearborn_Term_Life_Spouse_Empl_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
RecordType.Name = &apos;Dearborn - Term Life&apos;,
NOT(ISNEW()), 
AND(
ISBLANK(Dearborn_Life_Vol_Emp_Choice__c),
ISBLANK( Dearborn_Life_Vol_Emp_Min__c ), 
ISBLANK( Dearborn_Life_Vol_Emp_Max__c ), 
ISBLANK( Dearborn_Life_Vol_Emp_Increments__c ), 
ISBLANK( Dearborn_Life_Vol_Emp_Multiple_of_Salary__c ),
ISBLANK( TEXT(Dearborn_Life_Vol_Emp_Inc_Cov_Reduce__c) ), 
ISBLANK( TEXT(Dearborn_Life_Vol_Emp_Multiple_Cov_Reduc__c )), 
ISBLANK( Dearborn_Life_Vol_Emp_Comments__c )), 

OR( 
NOT(ISBLANK( Dearborn_Life_Vol_Spouse_Choice__c )),
NOT(ISBLANK( Dearborn_Life_Vol_Spouse_Max__c )),
NOT(ISBLANK( Dearborn_Life_Vol_Spouse_Min__c )),
NOT(ISBLANK( Dearborn_Life_Vol_Spouse_Increments__c )),
NOT(ISBLANK ( Dearborn_Life_Vol_Spouse_Multiple_of_EE__c ))))</errorConditionFormula>
        <errorMessage>The Voluntary Life Employee Benefits section needs to be filled out if Voluntary Life Spouse Coverage is requested</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dearborn_Term_Life_Spouse_Incr_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(INCLUDES(Dearborn_Life_Vol_Spouse_Choice__c, &quot;Incremental Choice&quot;),  OR(ISBLANK(Dearborn_Life_Vol_Spouse_Max__c), ISBLANK( Dearborn_Life_Vol_Spouse_Min__c ), ISBLANK( Dearborn_Life_Vol_Spouse_Increments__c  ) ))</errorConditionFormula>
        <errorMessage>Incremental Choice Minimum, Incremental Choice Maximum, and Increments are Required when Incremental Choice is chosen for Benefit Amount Choice</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dearborn_Term_Life_Spouse_Mul_Salry_Rqd</fullName>
        <active>true</active>
        <errorConditionFormula>AND(INCLUDES(Dearborn_Life_Vol_Spouse_Choice__c, &quot;Multiple of EE Salary Choice&quot;),  ISBLANK(Dearborn_Life_Vol_Spouse_Multiple_of_EE__c) )</errorConditionFormula>
        <errorDisplayField>Dearborn_Life_Vol_Spouse_Multiple_of_EE__c</errorDisplayField>
        <errorMessage>Muliple of EE Salary Choice is required when Multiple of EE Salary Choice is selected in Benefit Amount Choice</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dearborn_Term_Life_Vol_Emp_Comments_Req</fullName>
        <active>true</active>
        <description>If Multiple Coverage Reduction Schedule or Incremental Coverage Reduction Schedule is Other then comments is required</description>
        <errorConditionFormula>AND( 
OR( 
ISPICKVAL(Dearborn_Life_Vol_Emp_Multiple_Cov_Reduc__c, &apos;Other&apos;), 
ISPICKVAL(Dearborn_Life_Vol_Emp_Inc_Cov_Reduce__c, &apos;Other&apos;) 
), 
ISBLANK(Dearborn_Life_Vol_Emp_Comments__c) 
)</errorConditionFormula>
        <errorDisplayField>Dearborn_Life_Vol_Emp_Comments__c</errorDisplayField>
        <errorMessage>The Comments field must be filled out if the Incremental Coverage Reduction Schedule or Multiple Coverage Reduction Schedule fields is &apos;Other&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dearborn_Term_Life_Vol_Emp_Req_Fields</fullName>
        <active>true</active>
        <description>If multiple of salary choice is chosen in the benefit amount choice field then the multiple of salary choice field and the multiple coverage reduction schedule is required.</description>
        <errorConditionFormula>AND(
RecordType.Name = &apos;Dearborn - Term Life&apos;,
INCLUDES(Dearborn_Life_Vol_Emp_Choice__c, &apos;Multiple of Salary Choice&apos;),
OR(
ISBLANK(Dearborn_Life_Vol_Emp_Multiple_of_Salary__c),
ISBLANK(TEXT(Dearborn_Life_Vol_Emp_Multiple_Cov_Reduc__c))
)
)</errorConditionFormula>
        <errorDisplayField>Dearborn_Life_Vol_Emp_Choice__c</errorDisplayField>
        <errorMessage>Multiple of Salary is Chosen therefore, you must fill out the Multiple of Salary Choice field and the Multiple Coverage Reduction Schedule field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dearborn_Term_Life_Vol_Emp_Req_Inc</fullName>
        <active>true</active>
        <description>If Incremental Choice is chosen in the Benefit amount choice then increments, increment max and increment min fields are required</description>
        <errorConditionFormula>AND(
RecordType.Name = &apos;Dearborn - Term Life&apos;,
INCLUDES(Dearborn_Life_Vol_Emp_Choice__c, &apos;Incremental Choice&apos;),
OR(
ISBLANK(Dearborn_Life_Vol_Emp_Max__c),
ISBLANK(Dearborn_Life_Vol_Emp_Min__c),
ISBLANK(Dearborn_Life_Vol_Emp_Increments__c)
)
)</errorConditionFormula>
        <errorDisplayField>Dearborn_Life_Vol_Emp_Choice__c</errorDisplayField>
        <errorMessage>Incremental Choice is selected therefore, the Increments,     
Incremental Choice Minimum Value, and   
Incremental Choice Maximum Value fields are required</errorMessage>
    </validationRules>
</CustomObject>